// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.updateOrganization admin should be able to delete organization and organization should be anonymized 1`] = `
Object {
  "deleteOrganization": Object {
    "deletedOrganization": Object {
      "banner": null,
      "body": "",
      "logo": null,
      "members": Object {
        "edges": Array [],
      },
      "pendingOrganizationInvitations": Object {
        "totalCount": 0,
      },
      "projects": Object {
        "edges": Array [
          Object {
            "node": Object {
              "archived": true,
              "title": "Rapport d'évaluation 6 (AR6)",
              "visibility": "ADMIN",
            },
          },
        ],
      },
      "slug": "deleted-organization-1",
      "socialNetworks": null,
      "title": "deleted-organization 1",
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.updateOrganization should return ORGANIZATION_ALREADY_ANONYMIZED errorCode 1`] = `
Object {
  "deleteOrganization": Object {
    "deletedOrganization": null,
    "errorCode": "ORGANIZATION_ALREADY_ANONYMIZED",
  },
}
`;

exports[`mutations.updateOrganization should return ORGANIZATION_NOT_FOUND errorCode 1`] = `
Object {
  "deleteOrganization": Object {
    "deletedOrganization": null,
    "errorCode": "ORGANIZATION_NOT_FOUND",
  },
}
`;
